<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="business_relations_role_selection_description">"The following steps are to determine the ownership and Control person for your business. Let’s start with telling us your role in the company. "</string>
    <string name="business_relations_i_own_part_company_lbl">I own (part of) the company</string>
    <string name="business_relations_add_more_owners_and_control_person">Add more owners if there are any, and choose or add a Control person.</string>
    <string name="business_relations_i_partially_own_button">I (partially) own the company</string>
    <string name="business_relations_i_control_lbl">I am the Control person and have non ownership</string>
    <string name="business_relations_add_more_owners">You will have to add owners of the company.</string>
    <string name="business_relations_i_am_in_control">I am the Control person</string>
    <string name="business_relations_add_up_owners_to_company">Please edit your details, and add up to 4 owners of the company.</string>
    <string name="business_relations_add_owner">Add an owner</string>
    <string name="business_relations_continue_lbl">Continue</string>
    <string name="business_relations_back_lbl">Back</string>
    <string name="business_relations_government_requirements">The U.S. government requires applicants to list everyone who owns 25% or more of the business.</string>
    <string name="business_relations_edit_your_details">Please edit your details</string>
    <string name="business_relations_owner_position_with_percentage">%s,\n%s%% ownership</string>
    <string name="business_relations_edit">Edit</string>
    <string name="business_relations_btn_add_owner">Add</string>
    <string name="business_relations_cancel_lbl">Cancel</string>
    <string name="business_relations_all_information_needed_to_create_owner">This is all the information we need for the additional owner.</string>
    <string name="business_relations_all_information_needed_to_create_control_person">This is all the information we need for the Control person.</string>
    <string name="business_relations_last_name">Last name</string>
    <string name="business_relations_email_address">Email address</string>
    <string name="business_relations_role">Role</string>
    <string name="business_relations_none">Select a role</string>
    <string name="business_relations_ownership">Ownership percentage</string>
    <string name="business_relations_add_an_owner">Add an owner</string>
    <string name="business_relations_first_name">First name</string>
    <string name="business_relations_select_control_person">Select who will have responsibility to control, manage or direct the business.</string>
    <string name="business_relations_add_control_person">Add a Control person</string>
    <string name="business_relations_title_what_is_your_role">What is your role?</string>
    <string name="business_relations_title_add_business_owners">The business owners</string>
    <string name="business_relations_what_is_the_role">What is the role?</string>
    <string name="business_relations_btn_remove_owner">Remove owner</string>
    <string name="business_relations_btn_remove_control_person">Remove Control person</string>
    <string name="business_relations_label_check_info">Before we continue to the next step, let’s check if the summary below is correct.</string>
    <string name="business_relations_all_individuals_will_receive_email">All listed individuals will receive an invite via email, asking them to verify their identity in a few easy steps.</string>
    <string name="business_relations_info">Info</string>
    <string name="business_relations_remove_this_owner">Remove this owner?</string>
    <string name="business_relations_owner_will_be_deleted_permanently">This person will be deleted permanently from the list.</string>
    <string name="business_relations_remove">Remove</string>
    <string name="business_relations_keep">KEEP</string>
    <string name="business_relations_remove_control_person">Remove control person?</string>
    <string name="business_relations_send_continue">Send and continue</string>
    <string name="business_relations_label_final_check">Let’s do a final check</string>
    <string name="business_relations_save">Save</string>
    <string name="business_relations_add_a_control_person">Add a Control person</string>
    <string name="business_relations_control_person">Control person</string>
    <string name="business_relations_label_ownership_is_required">Ownership is required</string>
    <string name="business_relations_label_requirement_25_percent">The owner can only be added if he/she owns at least 25%.</string>
    <string name="business_relations_label_ownership_exceed_100">The combined ownership percentage can not exceed 100%.</string>
    <string name="business_relations_label_mobile_number_required">Mobile number is required</string>
    <string name="business_relations_label_mobile_number_must_be_10_digits">Mobile number must contain exactly 10 digits</string>
    <string name="business_relations_label_email_required">Email is required</string>
    <string name="business_relations_label_email_not_valid">Invalid email address</string>
    <string name="business_relations_label_last_name_required">Last name is required</string>
    <string name="business_relations_first_name_required">First name is required</string>
    <string name="business_relations_label_field_required">This field is required</string>
    <string name="business_relations_ownership_available">Ownership available %s%%</string>
    <string name="business_relations_all_owners_added">All the most relevant business owners have been added to this list.</string>

    <string name="business_relations_title_add_business_owner">Business relations</string>
    <string name="business_relations_title_role_selection" >Business relations</string>
    <string name="business_relations_title_select_control_person">Business relations</string>
    <string name="business_relations_title_summary" >Business relations</string>
    <string name="business_relations_subtitle_add_business_owner" >subtitle_add_business_owner</string>
    <string name="business_relations_subtitle_role_selection" >What is your role?</string>
    <string name="business_relations_subtitle_select_control_person">Select the control person</string>
    <string name="business_relations_journey_subtitle_summary">Select the control person</string>

</resources>