<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="?spacerLarge"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/business_relations_select_control_person"
            android:textAppearance="?textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/llOwnersContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnControlPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_relations_add_control_person"
            style="?buttonStyleLink"
            app:icon="@drawable/ic_add_user"/>

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnContinue"
            style="?attr/buttonStylePrimary"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_marginTop="?spacerLarge"
            android:gravity="center"
            android:text="@string/business_relations_continue_lbl"/>

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnBack"
            style="?attr/buttonStyleSecondary"
            android:layout_marginTop="?spacerSmall"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/business_relations_back_lbl"/>

    </LinearLayout>
</ScrollView>