<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="?spacerLarge"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/business_relations_add_up_owners_to_company"
            android:textAppearance="?textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.backbase.android.flow.common.uicomponents.MessageView
            android:id="@+id/messageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/llOwnersContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnAddOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_relations_add_owner"
            android:layout_marginTop="?spacerSmall"
            style="?buttonStyleLink"
            app:icon="@drawable/ic_add_user"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="?spacerLarge"
            android:background="?dividerHorizontal"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:tintMode="?colorAccent"
            android:src="@drawable/ic_warning"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/business_relations_government_requirements"
            android:textAppearance="?textAppearanceBody2"
            android:layout_marginTop="?spacerSmall"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnContinue"
            style="?attr/buttonStylePrimary"
            android:layout_width="match_parent"
            android:layout_marginTop="?spacerLarge"
            android:gravity="center"
            android:text="@string/business_relations_continue_lbl"/>

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnBack"
            style="?attr/buttonStyleSecondary"
            android:layout_marginTop="?spacerSmall"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/business_relations_back_lbl"/>

    </LinearLayout>
</ScrollView>