<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    tools:context=".ui.screen.CreateOwnerScreen">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="?spacerMedium"
            android:layout_marginTop="?spacerXLarge">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="?spacerSmall"
                        android:src="@drawable/ic_close_cross" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/lblTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business_relations_add_an_owner"
                        android:textAppearance="?textAppearanceHeadline5" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?spacerMedium"
                    android:layout_marginBottom="?spacerMedium"
                    android:text="@string/business_relations_all_information_needed_to_create_owner"
                    android:textAppearance="?textAppearanceBody1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_relations_first_name"
                    android:textAppearance="?textAppearanceSubtitle1Medium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputFirstName"
                    style="?textInputStyle"
                    android:layout_marginTop="?spacerXSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_relations_last_name"
                    android:textAppearance="?textAppearanceSubtitle1Medium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLastName"
                    style="?textInputStyle"
                    android:layout_marginTop="?spacerXSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_relations_email_address"
                    android:textAppearance="?textAppearanceSubtitle1Medium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="?textInputStyle"
                    android:layout_marginTop="?spacerXSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mobile Number"
                    android:textAppearance="?textAppearanceSubtitle1Medium" />

                <LinearLayout
                    android:id="@+id/lblMobileNumberArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="?textInputStyle"
                        android:layout_marginTop="?spacerXSmall"
                        android:layout_width="82dp"
                        android:layout_height="wrap_content"
                        android:enabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtCountryCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:inputType="textEmailAddress"
                            android:text="+1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobileNumber"
                        style="?textInputStyle"
                        android:layout_marginTop="?spacerXSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="?spacerXSmall">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtMobileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_relations_role"
                    android:textAppearance="?textAppearanceSubtitle1Medium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtRole"
                    android:layout_marginTop="?spacerXSmall"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="dropdown_menu"
                    app:layout_constraintEnd_toStartOf="@+id/localeInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currencyCode">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/currencyInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/business_relations_none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/otherRoleInput"
                    android:visibility="gone"
                    style="?textInputStyle"
                    android:layout_marginTop="?spacerXSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="?spacerXSmall">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtOtherRole"
                    android:hint="@string/business_relations_what_is_the_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblOwnershipPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_relations_ownership"
                    android:textAppearance="?textAppearanceSubtitle1Medium" />

                <LinearLayout
                    android:id="@+id/llOwnershipPercentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputOwnershipPercentage"
                        style="?textInputStyle"
                        android:layout_marginTop="?spacerXSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="?spacerXSmall">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtOwnershipPercentage"
                            android:layout_width="@dimen/label_ownership_width"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/lblAvailablePercentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?spacerSmall"
                    android:layout_marginBottom="?spacerMedium"
                    android:textAppearance="?textAppearanceBody2"
                    android:textColor="?colorTextSupport" />

                <com.backbase.android.design.button.BackbaseButton
                    android:id="@+id/btnRemoveControlPerson"
                    style="?attr/buttonStyleLink"
                    app:icon="@drawable/ic_add_user"
                    android:layout_width="wrap_content"
                    android:text="@string/business_relations_btn_remove_control_person" />

                <com.backbase.android.design.button.BackbaseButton
                    android:id="@+id/btnRemoveOwner"
                    style="?attr/buttonStyleLink"
                    app:icon="@drawable/ic_delete"
                    android:layout_width="wrap_content"
                    android:text="@string/business_relations_btn_remove_owner" />

                <com.backbase.android.design.button.BackbaseButton
                    android:id="@+id/btnContinue"
                    style="?attr/buttonStylePrimary"
                    android:layout_width="match_parent"
                    android:text="@string/business_relations_btn_add_owner" />

                <com.backbase.android.design.button.BackbaseButton
                    android:id="@+id/btnBack"
                    style="?attr/buttonStyleSecondary"
                    android:layout_width="match_parent"
                    android:layout_marginTop="?spacerSmall"
                    android:gravity="center"
                    android:text="@string/business_relations_cancel_lbl" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>